--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/truck.png" />
+    <meta name="viewport" content="wi dth=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://maps.googleapis.com https://*.googleapis.com">
-    <title>Vite + React</title>
+    <title>Truck Route Planner</title>
   </head>
   <body>
     <div id="root"></div>
